gearset/main/default/objects/Case/listViews/BaseQueue_Case.listView-meta.xml
<ListView>
    <fullName>BaseQueue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>BaseQueue</label>
    <queue>BaseQueue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>