gearset/main/default/objects/Case/listViews/NoRoute1_Case.listView-meta.xml
<ListView>
    <fullName>NoRoute1_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>NoRoute1</label>
    <queue>NoRoute1</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>