gearset/main/default/objects/Case/listViews/NoRoute2_Case.listView-meta.xml
<ListView>
        <fullName>NoRoute2_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>NoRoute2</label>
        <queue>NoRoute2</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </ListView>