gearset/main/default/objects/Case/listViews/q10_Case.listView-meta.xml
<ListView>
    <fullName>q10_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>q10</label>
    <queue>q10</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>