gearset/main/default/objects/Case/listViews/q11_Case.listView-meta.xml
<ListView>
    <fullName>q11_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>q11</label>
    <queue>q11</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>