gearset/main/default/objects/Case/listViews/q12_Case.listView-meta.xml
<ListView>
    <fullName>q12_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>q12</label>
    <queue>q12</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>