gearset/main/default/objects/Case/listViews/q13_Case.listView-meta.xml
<ListView>
    <fullName>q13_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>q13</label>
    <queue>q13</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>