gearset/main/default/objects/Case/listViews/q14_Case.listView-meta.xml
<ListView>
        <fullName>q14_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>q14</label>
        <queue>q14</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </ListView>