gearset/main/default/objects/Case/listViews/q15_Case.listView-meta.xml
<ListView>
    <fullName>q15_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>q15</label>
    <queue>q15</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>