gearset/main/default/objects/Case/listViews/q16_Case.listView-meta.xml
<ListView>
    <fullName>q16_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>q16</label>
    <queue>q16</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>