gearset/main/default/objects/Case/listViews/q17_Case.listView-meta.xml
<ListView>
    <fullName>q17_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>q17</label>
    <queue>q17</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>