gearset/main/default/objects/Case/listViews/q18_Case.listView-meta.xml
<ListView>
        <fullName>q18_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>q18</label>
        <queue>q18</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </ListView>