gearset/main/default/objects/Case/listViews/q19_Case.listView-meta.xml
<ListView>
    <fullName>q19_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>q19</label>
    <queue>q19</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>