gearset/main/default/objects/Case/listViews/q1_Case.listView-meta.xml
<ListView>
    <fullName>q1_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>q1</label>
    <queue>q1</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>